add human.txt with info about founders, contributors, etc add human.txt link and button

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,6 +30,21 @@ a:hover {
     color: #333;
 }
 
+footer {
+    position:absolute;
+    bottom:0;
+    width:100%;
+    display: block;
+    margin: 0 auto;
+    overflow: hidden;
+    padding-right: 1.5rem;
+    padding-bottom: 1rem;
+ }
+
+ footer a {
+     float: right;
+ }
+
 .title {
     border: 0;
     clip-path: inset(50%);
